--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install: "pip install -r requirements.txt"
 script:  "nosetests -v"
 
-before_script: "echo '{}' > config.json"
+before_script: "python run.py"
 
 notifications:
   email: false
