--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,26 @@
-language: python
-python:
-  - "2.7"
-install: "pip install -r requirements.txt"
-script:  "nosetests -v"
-
-before_script: "python run.py"
-
-notifications:
+--- 
+python: 
+- "2.7"
+script: nosetests -v
+notifications: 
   email: false
+before_script: python run.py
+language: python
+env: 
+- secure: |-
+    M/Cu0kzVld5K6ZO5MRMdSs25rXgEUXKjiFDdcVGotfY61EXbGNv7KpLju1SZ
+    lfpvCgFhhOp9wEyXcAFilOLH+HmRcxbjLxjDruQI6gvaXDk3OmceNhFG/ptT
+    NcSfU7+BQIB1itrhO9FMxTRaYBp3y3OyUjqT7RqJ2x7yIOqY5Yc=
+- secure: |-
+    SZyrEEJ0chSsZrQIg565TruKwxGA/MBmOZJ+3zsM3WDY0/HjmkXFKuin0DSh
+    qIjaOR81YPX9ThVbaZAc/RRHRz/rsr3g9lvvvp9vG7MV+LkICkEoF1zOOiwS
+    LUZRID/S3ILLLQT6gsH7e/JXXIZlD1hpnEcVDdD9Spgj5/Y1aW8=
+- secure: |-
+    BxNRQlgloxKNQVW3lhzPVkv3k8PnYvlSuYuoJEtglTIMpzlB0g+6ppTIx3qu
+    N/Wy72GqjRleYcYR/yx1wgdWIlfhE5IpHyK8xcVPpfxlPHZ1BboudLOwS/2Z
+    62gi6UFHPZsvxiFGrqp1wbjqGSKzlBf1gcgQzBQnPaTgTNiCgBM=
+- secure: |-
+    MurlM3dkKvqPZvkSWc2OVrybSxyBRRRbZGCfVD5mrVgeBT6HchVgqmF0lbSp
+    o4HIWxInxfNxqsEGuVqJSFltuxDAetNHjHrUqvnCGXjL35LbsHBNu/eIHlCy
+    3uvwB1ZhIRtGscaavZ+pRbqKDLafDph/62p8mC8/uIpOK+jkFlc=
+install: pip install -r requirements.txt
